Fixes overflow issue in tables (#15840)

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -49,6 +49,15 @@ html {
     z-index: 999;
 }
 
+table {
+    table-layout: fixed;
+    width: 100%;
+
+    th,td {
+        word-wrap: break-word;
+    }
+}
+
 
 @media only screen and (max-width: $lap-end) {
     #sidebar {
